crates/tmark-writers/tests/snapshots/fixtures__table-header-markup@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{center}
\begin{tabularx}{\linewidth}{>{\raggedright\arraybackslash}X>{\raggedright\arraybackslash}X>{\raggedright\arraybackslash}X}
\toprule
\textbf{Key \tscodeinline{tlmgr} name} & \textbf{\textbf{Bold head}} & \textbf{\href{https://e.org}{Link}} \\
\midrule
\tscodeinline{body code} & \emph{em} & plain \\
\bottomrule
\end{tabularx}
\end{center}

---requires---
{
  "packages": [
    "booktabs",
    "fvextra",
    "tabularx",
    "tcolorbox"
  ],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
