crates/tmark-writers/tests/snapshots/fixtures__table-header-markup@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: 3,
  align: (left, left, left,),
  table.header([Key `tlmgr` name], [*Bold head*], [#link("https://e.org")[Link]]),
  [`body code`], [_em_], [plain],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
