crates/tmark-writers/tests/snapshots/fixtures__table-pipe-in-code@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<table>
<thead>
<tr>
<th>a | b</th>
<th>*c*</th>
</tr>
</thead>
<tbody>
<tr>
<td><code>x | y</code></td>
<td>z</td>
</tr>
</tbody>
</table>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
