crates/tmark-writers/tests/snapshots/fixtures__table-pipe-in-code@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{center}
\begin{tabularx}{\linewidth}{>{\raggedright\arraybackslash}X>{\raggedright\arraybackslash}X}
\toprule
\textbf{a | b} & \textbf{*c*} \\
\midrule
\tscodeinline{x | y} & z \\
\bottomrule
\end{tabularx}
\end{center}

---requires---
{
  "packages": [
    "booktabs",
    "fvextra",
    "tabularx",
    "tcolorbox"
  ],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
