crates/tmark-writers/tests/snapshots/fixtures__table-pipe-in-code@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: 2,
  align: (left, left,),
  table.header([a | b], [\*c\*]),
  [`x | y`], [z],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
